New achievement Apprentice Merchant (Level 3)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/339fea82da1b99beda1eb7b67cc72e1a'/></h2>
-Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 346 points<br>
+Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 350 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -36,6 +36,7 @@ Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Historian (Level 3)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Merchant (Level 2)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
+<li><div class="title">Apprentice Merchant (Level 3)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Plumber (Level 1)</div>  <div class="info">Use the internal plumbing commands of git.</div></li>
 <li><div class="title">Apprentice Plumber (Level 2)</div>  <div class="info">Use the internal plumbing commands of git.</div></li>
 <li><div class="title">Apprentice Presenter (Level 1)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
@@ -99,29 +100,29 @@ Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
- 761 log
- 489 status
- 477 commit
- 297 diff
- 265 checkout
- 206 branch
- 150 add
- 127 push
- 109 show
+ 774 log
+ 493 status
+ 483 commit
+ 303 diff
+ 266 checkout
+ 207 branch
+ 152 add
+ 129 push
+ 111 show
   90 rebase
   53 reset
   32 stash
-  28 fetch
+  29 fetch
   27 config
-  24 remote
+  26 remote
   24 clean
   21 cherry-pick
   18 subtree
   17 merge
+  16 init
   15 rm
-  15 init
   13 reflog
-  12 pull
+  13 pull
   11 help
    8 revert
    5 update-ref
@@ -135,6 +136,7 @@ Git commands sorted by usage:
    2 --help
    1 stahs
    1 show-ref
+   1 nls
    1 ls
    1 iff
    1 ckeckout
