New achievement Master Presenter (Level 7)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/339fea82da1b99beda1eb7b67cc72e1a'/></h2>
-Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 372 points<br>
+Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 380 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -82,6 +82,7 @@ Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Master Historian (Level 7)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Historian (Level 8)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Historian (Level 9)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
+<li><div class="title">Master Presenter (Level 7)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Presenter (Level 4)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
@@ -103,39 +104,39 @@ Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
- 815 log
- 512 commit
- 501 status
- 321 diff
- 273 checkout
- 220 branch
- 156 add
- 144 push
- 120 show
+ 864 log
+ 558 commit
+ 510 status
+ 338 diff
+ 282 checkout
+ 226 branch
+ 174 push
+ 164 add
+ 126 show
   90 rebase
   53 reset
-  34 fetch
+  41 fetch
   33 stash
-  27 remote
+  31 remote
   27 config
-  24 clean
+  25 clean
   21 cherry-pick
   18 subtree
-  17 merge
-  16 init
+  18 merge
+  17 init
+  16 pull
   15 rm
   13 reflog
-  13 pull
   11 help
    8 revert
    5 update-ref
+   3 ns
    3 mv
+   3 clone
    3 --version
    2 sun
-   2 ns
    2 notes
    2 ln
-   2 clone
    2 --help
    1 stahs
    1 show-ref
