--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/339fea82da1b99beda1eb7b67cc72e1a'/></h2>
-Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 406 points<br>
+Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 415 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -86,6 +86,7 @@ Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Master Historian (Level 9)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Presenter (Level 7)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 8)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Presenter (Level 4)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
@@ -107,23 +108,23 @@ Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-1001 log
- 676 commit
- 564 status
- 377 diff
- 295 checkout
- 265 add
- 245 push
+1019 log
+ 692 commit
+ 569 status
+ 378 diff
+ 297 checkout
+ 283 add
+ 255 push
  232 branch
- 139 show
+ 145 show
   94 rebase
-  57 reset
-  52 fetch
+  58 reset
+  53 fetch
   33 stash
   31 remote
+  28 pull
   27 config
   27 clean
-  26 pull
   21 cherry-pick
   20 merge
   18 subtree
