New achievement Cleaning lady (Level 5)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/339fea82da1b99beda1eb7b67cc72e1a'/></h2>
-Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 417 points<br>
+Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 423 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -70,6 +70,7 @@ Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Cleaning lady (Level 4)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
+<li><div class="title">Cleaning lady (Level 5)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Collector (Level 4)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Collector (Level 5)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Dentist</div>  <div class="info">Extracted patches using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -p.</div></li>
@@ -109,39 +110,39 @@ Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-1052 log
- 712 commit
- 576 status
- 378 diff
- 305 add
- 300 checkout
- 262 push
- 237 branch
- 151 show
-  94 rebase
-  59 reset
-  54 fetch
-  33 stash
+1125 log
+ 776 commit
+ 628 status
+ 386 diff
+ 379 add
+ 316 checkout
+ 294 push
+ 243 branch
+ 158 show
+  98 rebase
+  64 reset
+  55 fetch
+  39 pull
+  35 stash
+  32 clean
   31 remote
-  31 pull
-  29 clean
   27 config
-  21 cherry-pick
-  20 merge
+  22 cherry-pick
+  21 merge
   20 init
   18 subtree
-  15 rm
+  16 rm
   13 reflog
-  11 help
+  12 help
    8 revert
    5 update-ref
    4 notes
+   4 mv
+   4 clone
+   4 --version
    3 ns
-   3 mv
-   3 clone
-   3 --version
+   3 ln
    2 sun
-   2 ln
    2 --help
    1 stahs
    1 show-ref
