--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/339fea82da1b99beda1eb7b67cc72e1a'/></h2>
-Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 428 points<br>
+Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 435 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -73,6 +73,7 @@ Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Cleaning lady (Level 5)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Collector (Level 4)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Collector (Level 5)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
+<li><div class="title">Collector (Level 6)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Dentist</div>  <div class="info">Extracted patches using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -p.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Historian (Level 4)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -111,40 +112,40 @@ Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-1180 log
- 811 commit
- 669 status
- 420 add
+1195 log
+ 814 commit
+ 679 status
+ 422 add
  396 diff
- 330 checkout
- 296 push
- 249 branch
- 166 show
- 102 rebase
-  69 reset
-  57 fetch
-  49 remote
+ 334 checkout
+ 300 push
+ 261 branch
+ 170 show
+ 104 rebase
+  75 reset
+  64 fetch
+  55 remote
   39 pull
   35 stash
   32 clean
-  28 config
+  30 config
+  24 subtree
   22 init
   22 cherry-pick
   21 merge
-  19 subtree
   17 rm
   13 reflog
   12 help
    8 revert
    8 mv
    5 update-ref
+   5 clone
    5 --version
    4 ns
    4 notes
-   4 clone
    3 ln
+   3 --help
    2 sun
-   2 --help
    1 stahs
    1 show-ref
    1 nls
