--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/339fea82da1b99beda1eb7b67cc72e1a'/></h2>
-Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 435 points<br>
+Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 437 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -38,6 +38,7 @@ Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Merchant (Level 2)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Merchant (Level 3)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Miller (Level 1)</div>  <div class="info">Add only part of a file to the stage 326 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
+<li><div class="title">Apprentice Pilgrim (Level 1)</div>  <div class="info">Performed a rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> --onto.</div></li>
 <li><div class="title">Apprentice Plumber (Level 1)</div>  <div class="info">Use the internal plumbing commands of git.</div></li>
 <li><div class="title">Apprentice Plumber (Level 2)</div>  <div class="info">Use the internal plumbing commands of git.</div></li>
 <li><div class="title">Apprentice Presenter (Level 1)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
@@ -112,34 +113,34 @@ Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-1195 log
- 814 commit
- 679 status
- 422 add
- 396 diff
- 334 checkout
- 300 push
- 261 branch
- 170 show
- 104 rebase
-  75 reset
-  64 fetch
-  55 remote
+1291 log
+ 845 commit
+ 733 status
+ 455 add
+ 398 diff
+ 347 checkout
+ 313 push
+ 272 branch
+ 188 show
+ 126 rebase
+  77 reset
+  70 fetch
+  58 remote
   39 pull
-  35 stash
+  37 stash
+  34 subtree
   32 clean
   30 config
-  24 subtree
-  22 init
-  22 cherry-pick
+  25 init
+  23 cherry-pick
   21 merge
   17 rm
+  14 help
   13 reflog
-  12 help
    8 revert
    8 mv
+   6 clone
    5 update-ref
-   5 clone
    5 --version
    4 ns
    4 notes
@@ -186,7 +187,6 @@ There are       51 Achievements. Some achievements can be leveled up depending o
 <li><div class="title">Messenger</div><div class="info">Applied a patch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-am.html">git-am</a>.</div></li>
 <li><div class="title">News Reader</div><div class="info">Show logs with difference each commit introduces with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-whatchanged.html">git-whatchanged</a></div></li>
 <li><div class="title">Pedantic</div><div class="info">Use the flow extension to encourage an orderly and standardized branching model</div></li>
-<li><div class="title">Pilgrim</div><div class="info">Performed a rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> --onto.</div></li>
 <li><div class="title">Postman</div><div class="info">Send a collection of patches from stdin to an IMAP folder with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-imap-send.html">git-imap-send</a></div></li>
 <li><div class="title">Stamp Collector</div><div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a> --date=relative</div></li>
 <li><div class="title">Traveler</div><div class="info">Streamed changes between another rcs with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-svn.html">git-svn</a> or <a href="http://www.kernel.org/pub/software/scm/git/docs/git-p4.html">git-p4</a>.</div></li>
