New achievement Master Seamstress (Level 7)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/339fea82da1b99beda1eb7b67cc72e1a'/></h2>
-Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 437 points<br>
+Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 445 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -89,6 +89,7 @@ Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Master Historian (Level 8)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Historian (Level 9)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Presenter (Level 7)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
+<li><div class="title">Master Seamstress (Level 7)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -113,16 +114,16 @@ Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-1291 log
- 845 commit
- 733 status
- 455 add
- 398 diff
- 347 checkout
- 313 push
+1312 log
+ 855 commit
+ 739 status
+ 466 add
+ 401 diff
+ 354 checkout
+ 315 push
  272 branch
- 188 show
- 126 rebase
+ 190 show
+ 136 rebase
   77 reset
   70 fetch
   58 remote
