--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/339fea82da1b99beda1eb7b67cc72e1a'/></h2>
-Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 445 points<br>
+Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 448 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -38,6 +38,7 @@ Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Merchant (Level 2)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Merchant (Level 3)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Miller (Level 1)</div>  <div class="info">Add only part of a file to the stage 326 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
+<li><div class="title">Apprentice Miller (Level 2)</div>  <div class="info">Add only part of a file to the stage 499 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice Pilgrim (Level 1)</div>  <div class="info">Performed a rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> --onto.</div></li>
 <li><div class="title">Apprentice Plumber (Level 1)</div>  <div class="info">Use the internal plumbing commands of git.</div></li>
 <li><div class="title">Apprentice Plumber (Level 2)</div>  <div class="info">Use the internal plumbing commands of git.</div></li>
@@ -114,17 +115,17 @@ Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-1312 log
+1318 log
  855 commit
- 739 status
- 466 add
- 401 diff
- 354 checkout
+ 746 status
+ 468 add
+ 402 diff
+ 358 checkout
  315 push
- 272 branch
+ 273 branch
  190 show
- 136 rebase
-  77 reset
+ 137 rebase
+  78 reset
   70 fetch
   58 remote
   39 pull
