New achievement Master Stone Mason (Level 9)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/339fea82da1b99beda1eb7b67cc72e1a'/></h2>
-Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 448 points<br>
+Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 458 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -95,6 +95,7 @@ Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 8)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Master Stone Mason (Level 9)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Merchant (Level 4)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Presenter (Level 4)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Presenter (Level 5)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
@@ -115,17 +116,17 @@ Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-1318 log
- 855 commit
- 746 status
- 468 add
- 402 diff
- 358 checkout
- 315 push
- 273 branch
- 190 show
+1336 log
+ 866 commit
+ 753 status
+ 481 add
+ 406 diff
+ 367 checkout
+ 320 push
+ 278 branch
+ 192 show
  137 rebase
-  78 reset
+  80 reset
   70 fetch
   58 remote
   39 pull
@@ -133,11 +134,11 @@ Git commands sorted by usage:
   34 subtree
   32 clean
   30 config
-  25 init
+  26 init
   23 cherry-pick
-  21 merge
+  22 merge
   17 rm
-  14 help
+  15 help
   13 reflog
    8 revert
    8 mv
