New achievement Apprentice Miller (Level 3)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/339fea82da1b99beda1eb7b67cc72e1a'/></h2>
-Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 464 points<br>
+Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 468 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -39,6 +39,7 @@ Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Merchant (Level 3)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Miller (Level 1)</div>  <div class="info">Add only part of a file to the stage 326 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice Miller (Level 2)</div>  <div class="info">Add only part of a file to the stage 499 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
+<li><div class="title">Apprentice Miller (Level 3)</div>  <div class="info">Add only part of a file to the stage 640 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice Pilgrim (Level 1)</div>  <div class="info">Performed a rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> --onto.</div></li>
 <li><div class="title">Apprentice Plumber (Level 1)</div>  <div class="info">Use the internal plumbing commands of git.</div></li>
 <li><div class="title">Apprentice Plumber (Level 2)</div>  <div class="info">Use the internal plumbing commands of git.</div></li>
@@ -117,36 +118,36 @@ Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-1382 log
- 886 commit
- 768 status
- 503 add
- 414 diff
- 383 checkout
- 325 push
- 283 branch
- 199 show
- 137 rebase
-  85 reset
-  76 fetch
-  62 remote
-  42 pull
+1429 log
+ 948 commit
+ 831 status
+ 601 add
+ 420 diff
+ 392 checkout
+ 384 push
+ 294 branch
+ 206 show
+ 140 rebase
+  95 reset
+  84 fetch
+  71 remote
+  51 pull
   37 subtree
   37 stash
-  33 clean
+  34 clean
   30 config
-  27 init
-  23 merge
+  29 init
+  27 merge
   23 cherry-pick
   17 rm
   15 help
   13 reflog
-   8 revert
-   8 mv
+  11 mv
+   9 revert
    8 clone
    5 update-ref
+   5 ns
    5 --version
-   4 ns
    4 notes
    4 ln
    3 --help
@@ -154,6 +155,7 @@ Git commands sorted by usage:
    1 stats
    1 stahs
    1 show-ref
+   1 rever
    1 nls
    1 ls
    1 iff
