New achievement Thug (Level 6)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/339fea82da1b99beda1eb7b67cc72e1a'/></h2>
-Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 475 points<br>
+Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 482 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -115,25 +115,26 @@ Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 <li><div class="title">Thug (Level 4)</div>  <div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
 <li><div class="title">Thug (Level 5)</div>  <div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
+<li><div class="title">Thug (Level 6)</div>  <div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
 <li><div class="title">Weaver</div>  <div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a></div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-1465 log
- 964 commit
- 869 status
- 617 add
- 425 diff
- 409 checkout
- 391 push
- 309 branch
- 215 show
- 150 rebase
+1480 log
+ 971 commit
+ 878 status
+ 623 add
+ 427 diff
+ 419 checkout
+ 395 push
+ 318 branch
+ 219 show
+ 159 rebase
  100 reset
   86 fetch
   71 remote
-  51 pull
-  46 stash
+  52 pull
+  51 stash
   38 clean
   37 subtree
   30 config
@@ -141,8 +142,8 @@ Git commands sorted by usage:
   28 merge
   23 cherry-pick
   17 rm
+  15 reflog
   15 help
-  13 reflog
   11 mv
    9 revert
    8 clone
@@ -158,6 +159,7 @@ Git commands sorted by usage:
    1 stahs
    1 show-ref
    1 rever
+   1 reabse
    1 nls
    1 ls
    1 iff
