New achievement Master Author (Level 10)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/339fea82da1b99beda1eb7b67cc72e1a'/></h2>
-Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 482 points<br>
+Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 493 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -85,6 +85,7 @@ Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Historian (Level 5)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Historian (Level 6)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
+<li><div class="title">Master Author (Level 10)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Author (Level 7)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Author (Level 8)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Author (Level 9)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -120,33 +121,33 @@ Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-1480 log
- 971 commit
- 878 status
- 623 add
- 427 diff
- 419 checkout
- 395 push
- 318 branch
- 219 show
- 159 rebase
- 100 reset
-  86 fetch
-  71 remote
-  52 pull
-  51 stash
-  38 clean
+1552 log
+1024 commit
+ 958 status
+ 693 add
+ 442 checkout
+ 437 diff
+ 426 push
+ 336 branch
+ 237 show
+ 164 rebase
+ 112 reset
+  89 fetch
+  76 remote
+  58 pull
+  53 stash
+  42 clean
   37 subtree
+  32 merge
+  32 init
   30 config
-  29 init
-  28 merge
   23 cherry-pick
-  17 rm
+  19 rm
   15 reflog
   15 help
   11 mv
    9 revert
-   8 clone
+   9 clone
    5 update-ref
    5 ns
    5 --version
@@ -161,6 +162,7 @@ Git commands sorted by usage:
    1 rever
    1 reabse
    1 nls
+   1 lsn
    1 ls
    1 iff
    1 ckeckout
