--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/339fea82da1b99beda1eb7b67cc72e1a'/></h2>
-Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 493 points<br>
+Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 502 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -94,6 +94,7 @@ Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Master Historian (Level 8)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Historian (Level 9)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Presenter (Level 7)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
+<li><div class="title">Master Presenter (Level 8)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Master Seamstress (Level 7)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -121,48 +122,50 @@ Unlocked       25/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-1552 log
-1024 commit
- 958 status
- 693 add
- 442 checkout
- 437 diff
- 426 push
- 336 branch
- 237 show
- 164 rebase
- 112 reset
-  89 fetch
-  76 remote
-  58 pull
-  53 stash
-  42 clean
-  37 subtree
-  32 merge
+1639 log
+1066 commit
+ 991 status
+ 737 add
+ 472 checkout
+ 451 push
+ 445 diff
+ 353 branch
+ 254 show
+ 168 rebase
+ 117 reset
+  96 fetch
+  80 remote
+  59 pull
+  54 stash
+  46 subtree
+  45 clean
+  33 merge
   32 init
   30 config
   23 cherry-pick
   19 rm
-  15 reflog
+  17 reflog
   15 help
   11 mv
+  10 clone
    9 revert
-   9 clone
    5 update-ref
    5 ns
+   5 ln
    5 --version
    4 notes
-   4 ln
    3 --help
    2 sun
    1 statsu
    1 stats
    1 stahs
+   1 shwo
    1 show-ref
    1 rever
    1 reabse
    1 nls
    1 lsn
+   1 ls-remote
    1 ls
    1 iff
    1 ckeckout
